test/test_examples/syntactic_examples/syntax_error/error_statement_21.zig
// Syntax error: missing data type after colon in variable definition

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    const y : = 9;
}